# bomberhat

./: .clang-format  .gitignore  .gitman.yml  .pre-commit  CMakeLists.txt  README.md  environment.yml
asen5010_attitude_prj/: DCM2EP.m  DCM2MRP.m  EarthApprox.m  Euler_313.m  Long_MRP.m  MRP2DCM.m  MRP_B.m  SC.m  Short_MRP.m  Target.m  add_MRP.m  col_vec.m  ctrl_func.m  main.m  new_figure.m  plotter.m  plotter3.m  ref_frame.m  rk4_step.m  rot1.m  rot2.m  rot3.m  simeq.m  state_func.m  sub_MRP.m  tilde.m  timeconv.m  unit_vector.m  verif_rk4.m  verify_ortho.m
att_ctrl/: Cargo.toml
att_ctrl/src/: attctrl.rs  main.rs  mrp.rs  vehdynamics.rs  vehstate.rs
firmware/: README.md
firmware/core/: CMakeLists.txt
firmware/core/inc/: bus.hpp  context.hpp  core.hpp  error.hpp  sensor.hpp
firmware/core/inc/estimators/: kalman-filter.hpp
firmware/core/inc/interface/: bus.hpp  controller.hpp  estimator.hpp  sensor.hpp
firmware/core/tests/: CMakeLists.txt  kalman-filter.cpp
firmware/notebooks/: learned-stm.ipynb  neural-sensor-fusion.ipynb
sim/: CMakeLists.txt
sim/inc/: render.hpp  simulation.hpp
sim/inc/scenario/: quad-rotor.hpp  reaction-wheels.hpp
sim/src/: main.cpp  simulation.cpp
sim/src/scenario/: quad-rotor.cpp  reaction-wheels.cpp
